<resources>
    <string name="app_name">HelloKotlin</string>
    <string name="settings">settings</string>
    <string name="city_zipcode">City_ZipCode</string>
    <string name="behavior">behavior</string>
</resources>
